fixes #1790, Autocomplete text box has a bit too much padding on left side

--- a/chrome/skin/default/zotero/bindings/itembox.css
+++ b/chrome/skin/default/zotero/bindings/itembox.css
@@ -15,6 +15,12 @@ textbox, tagsbox textbox
 	margin-left: 0;
 }
 
+.textbox-input-box
+{
+	margin-left: 0px;
+	margin-right: 0px;
+}
+
 
 /* DEBUG: this doesn't seem to work, unfortunately
 label[singleField=false]:after
